# type_challenges

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
advanced/: buffer.py  callable_protocol.py  decorator.py  descriptor.py  forward.py  generator.py  generic_class.py  never.py  never2.py  overload-literal.py  overload.py  paramspec.py  protocol.py  recursive.py  type.py  typed-dict.py  typeguard.py  typeshed.py  variadic_generics.py
basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
