[tool.poetry]
name = "type-challenges"
version = "0.1.0"
description = ""
authors = ["TatianaBezmenova <t.bezmenova@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pyright = "^1.1.384"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
